[package]
name = "ship_template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
tokio-serial = "5.4.1"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
clap = { version = "3", features = ["derive"] }